# prompt-harness-translator

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PUBLIC_RELEASE_CHECKLIST.md  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: test.yml
agents/: translator.md
commands/: translate.md
docs/: PUBLIC_RELEASE_CHECKLIST.md  SUPPORTED_FORMATS.md  supported-formats.md
examples/: sample_agent.md
rules/common/: mapping.md
skills/translation-design/: SKILL.md
src/prompt_harness_translator/: cli.py  core.py
tests/: test_cli.py  test_core.py  test_frontmatter_validation.py
