[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-harness-translator"
version = "0.1.0"
description = "Translate prompt and harness artifacts across formats"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
prompt-harness = "prompt_harness_translator.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
